--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "devDependencies": {
     "concurrently": "^8.2.2",
     "nodemon": "^3.1.3",
+    "ts-node": "^10.9.2",
     "wait-on": "^7.2.0"
   }
 }
