--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "nodemon": "^3.1.3",
     "ts-node": "^10.9.2",
     "wait-on": "^7.2.0"
+  },
+  "dependencies": {
+    "sequelize": "^6.37.5"
   }
 }
