--- a/server/package.json
+++ b/server/package.json
@@ -27,6 +27,7 @@
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.5",
+    "node-fetch": "^3.3.2",
     "pg": "^8.11.5",
     "sequelize": "^6.37.3"
   },
